# Markdown-Scope

./: LICENSE  README.md  config.template.toml  pyproject.toml
.github/workflows/: auto-tag-release.yml  release.yml
examples/: SKILL.md
examples/reference/: guide.md
examples/references/: field-notes.md  literature.md
src/: __init__.py  cli.py  index_builder.py  index_models.py  index_updater.py  markdown_parser.py  reader.py  searcher.py  utils.py  viewer.py
src/markdown_scope/: __main__.py  cli.py  config.py  exceptions.py  index_builder.py  reader.py  searcher.py  utils.py
src/markdown_scope/summary/: __init__.py  providers.py
src/summary/: providers.py
tests/: test_index_build.py  test_parser_heading_hierarchy.py  test_read_lines.py  test_read_section.py  test_search.py  test_summary_view_groups.py  test_update_index.py
