[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "markdown-scope"
version = "0.1.0"
description = "Structured Markdown indexing and selective reading CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "markdown-scope contributors" }
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.4",
  "httpx>=0.27.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
md-scope = "src.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
