[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "markdown-scope"
version = "0.1.0"
description = "Structured Markdown indexing and selective reading CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Markdown-Scope Contributors" }
]
keywords = ["markdown", "cli", "indexing", "ai", "retrieval", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.4",
  "httpx>=0.27.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/Nefelibata-D/Markdown-Scope"
Repository = "https://github.com/Nefelibata-D/Markdown-Scope"
Issues = "https://github.com/Nefelibata-D/Markdown-Scope/issues"

[project.scripts]
md-scope = "markdown_scope.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["test", "tests"]
addopts = "-q"
pythonpath = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_scope"]
